* Correction of session bleed issue. (issue 290) * Improvements to pagination UI. (issue 290)

--- a/htdocs/include/style.css
+++ b/htdocs/include/style.css
@@ -410,6 +410,34 @@ a.button_small
 	box-sizing:		content-box;
 }
 
+a.button_small_disabled
+{
+	background-color:	#949494;
+
+	text-decoration:	none;
+	font-size:		10px !important;
+	line-height:		10px;
+	padding: 		2px 10px;
+	cursor:			pointer;
+
+	color:			#ffffff;
+	font-style:		normal;
+	font-weight:		normal;
+
+	border-width:		0px;
+	border-style:		solid;
+
+	-moz-border-radius:	5px;
+	-khtml-border-radius:	5px;
+	-webkit-border-radius:	5px;
+	border-radius:		5px;
+	-moz-box-sizing:	content-box;
+	-webkit-box-sizing:	content-box;
+	-khtml-box-sizing:	content-box;
+	box-sizing:		content-box;
+}
+
+
 
 .button_export:hover, .button_export:hover
 {
